<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application name -->
    <string name="app_name">MCM Localization</string>

    <!-- home.xml -->
    <string name="localizationSettingsButtonLabel">Localization Settings</string>
    <string name="newNotificationsButtonLabel">New Notifications</string>
    <string name="searchButtonLabel">Search</string>
    <string name="locationButtonLabel">Get Location</string>
    <string name="merchantButtonLabel">Merchant Map</string>
    <string name="dealsButtonLabel">Deals</string>
    <string name="logoutButtonLabel">Log Out</string>
    <string name="makePaymentsButtonLabel">Make Payments</string>
    <string name="settingsButtonLabel">Settings</string>
    <string name="mcmLogo">MCM Logo</string>
    <string name="homeButtonText">Home</string>

    <!-- main.xml -->
    <string name="usernameLabel">Username: </string>
    <string name="passwordLabel">Password: </string>
    <string name="loginLabel">Login</string>

    <!-- coupons.xml -->
    <string name="dealsListLabel">List of Deals</string>

    <!-- merchant.xml -->
    <string name="listOfMerchantsLabel">List of Merchants</string>
    <string name="merchantMapButtonLabel">Merchant Map</string>
    <string name="forgotAccount">Forgot Username or Password?</string>
    <string name="createAccountLabel">Create New Account</string>
    <string name="viewHistoryButtonLabel">View History</string>
    <string name="merchantMapLabel">Merchant Map</string>

    <!-- GCM Strings -->
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>

    <!-- Options Strings -->
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="localizationSettingsLabel">LOCALIZATION</string>

    <!-- Preferences -->
    <string name="pref_sync">Syncing Preferences</string>
    <string name="pref_sync_summ">Summary here</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_deal_detail">DealDetail</string>
    <string name="dealTitle">Title</string>
    <string name="dealContent">Deal Content</string>
    <string name="title_activity_location">Location</string>
    
    <!-- Location -->
    <string name="updateLocationNetworkButtonLabel">Update Location using Network (Cell Tower/Wi-Fi)</string>
    <string name="updateLocationGPSButtonLabel">Update Location using GPS</string>
    <string name="stopUpdatingLocationButtonlabel">Stop Updating Location</string>
    <string name="goingAwayButtonLabel">Go away</string>
    
    <!-- Settings -->
    <string name="localizationCheckboxLabel">Enable localization</string>
    <string name="optInAllRadioLabel">Opt in to all deals</string>
    <string name="optInSomeRadioLabel">Subscribe to specific merchants</string>
    <string name="optOutAllRadioLabel">Out out of all deals</string>
    <string name="localizationSettingsLabelText">Localization Settings</string>
    <string name="targetedDealSettingsLabelText">Targeted Deal Settings</string>
    <string name="checkAllButtonText">Check All</string>
    <string name="clearAllButtonText">Clear All</string>
    <string name="registrationButtonText">Device Registration</string>
    <string name="deviceRegistrationTextLabel">Device Registration</string>
    <string name="registerDeviceButtonLabel">Register Device</string>

</resources>