<?xml version="1.0" encoding="utf-8"?>
<!-- <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >-->
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/localizationSettingsLabelText"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:background="#ffffff" />

    <CheckBox android:id="@+id/checkbox_localization"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/localizationCheckboxLabel"
        android:onClick = "onCheckboxClicked" />
    
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroup_opt"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/targetedDealSettingsLabelText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:id="@+id/View01"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#ffffff" />

	    <RadioButton android:id="@+id/radio_optInAll"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/optInAllRadioLabel"
	        android:onClick="onRadioButtonClicked"/>
	    <RadioButton android:id="@+id/radio_optOutAll"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/optOutAllRadioLabel"
	        android:onClick="onRadioButtonClicked"/>
	    <RadioButton android:id="@+id/radio_optInSome"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/optInSomeRadioLabel"
	        android:onClick="onRadioButtonClicked"/>
	</RadioGroup>
    
</LinearLayout>