<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dealTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dealTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/dealContent"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/dealContent"
        android:layout_weight="1" />
    
    <Button 
        android:id="@+id/homeButton"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_weight="0" 
        android:text="@string/homeButtonText"/>

</LinearLayout>